--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
            scroll-behavior:smooth;
         }
        </style>
+       <script type="module" src="index.js"></script>
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -52,16 +53,8 @@
             </div>
         </div>
     </section>
-    <section class="section1">
-        <div class="data">
-            <div class="text1">
-                <pre class="text">
-                    <br>
-    CREATIVE &
-    CRAZY IDEAS
-    MEETS CODE
-        </pre>
-            </div>
+    <section class="section1" >
+        <div  id="app">   
         </div>
     </section>
 
