--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,14 @@
             </div>
         </div>
     </section>
-    <section class="section1" >
-        <div  id="app">   
+    
+        <div  id="app"> 
+            <div id="hero"> 
+                <h1>CREATIVE & <BR/> CRAZY IDEAS <BR/> MEETS CODE</h1> 
+                <a target="_blank"></a>
+            </div>
         </div>
-    </section>
+    
 
 
 
