--- a/public/index.html
+++ b/public/index.html
@@ -286,25 +286,25 @@
               <center>
                 <h5>Follow Us</h5>
                 <ul>
-                  <a href="" style="text-decoration: none" id="icons"
+                  <a href="https://discord.com/channels/1147565564357771324/1147565564357771326" target="_blank" style="text-decoration: none" id="icons"
                     ><li>
                       <i class="fa-brands fa-discord" style="font-size: 1.75vw"></i>
                       <span>Discord</span>
                     </li></a
                   >
-                  <a href="" style="text-decoration: none" id="icons"
+                  <a href="https://www.instagram.com/cybernauts_nitj/" target="_blank" style="text-decoration: none" id="icons"
                     ><li>
                       <i class="fa-brands fa-instagram" style="font-size: 2vw"></i
                       ><span>Instagram</span>
                     </li></a
                   >
-                  <a href="" style="text-decoration: none" id="icons"
+                  <a href="https://github.com/cybernautsNITJ"  target="_blank" style="text-decoration: none" id="icons"
                     ><li>
                       <i class="fa-brands fa-github" style="font-size: 2vw"></i
                       ><span>Github</span>
                     </li></a
                   >
-                  <a href="" style="text-decoration: none" id="icons">
+                  <a href="https://www.linkedin.com/in/cybernauts-nitj-717a7a28a/" target="_blank" style="text-decoration: none" id="icons">
                     <li>
                       <i class="fa-brands fa-linkedin" style="font-size: 2vw"></i
                       ><span>Linkedin</span>
