--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
                 </p>
               </div>
             </center>
-            <i class="line"></i>
+            <!-- <i class="line"></i> -->
             <center>
               <div id="bottomline2">
                 <p>
