--- a/public/ritesh.html
+++ b/public/ritesh.html
@@ -33,7 +33,7 @@
 </div>
 <div class="faculty">
 <div style="display: inline;" id="faculty-images">
-    <img style="mix-blend-mode: luminosity;" src="HOD_sir1.png">
+    <img style="mix-blend-mode: luminosity;" src="pictures/HOD_sir1.png">
     <span style="color:whitesmoke;" >
         <p class="center">
             Mr.D K Gupta
@@ -50,7 +50,7 @@
 
 <div style="display: inline;" id="faculty-images">
     <center>
-    <img style="mix-blend-mode: luminosity;" src="Nisha_m.png">
+    <img style="mix-blend-mode: luminosity;" src="pictures/Nisha_m.png">
 </center>
     <span style="color:whitesmoke;" >
         <p class="center">
@@ -76,7 +76,7 @@
 <div class="container">
     <div class="projects-container" id="projects-container">
         <div  class="image-box">
-            <img  class="project-img" src="Arvind Project.png" > <div class="overlay">
+            <img  class="project-img" src="pictures/Arvind Project.png" > <div class="overlay">
             <div class="text">
                 <p>
                     <h1>Inspiro</h1>
@@ -97,7 +97,7 @@
         </div>
         </div>
         <div class="image-box">
-            <img  class="project-img" src="Ritesh Project.png" > <div class="overlay">
+            <img  class="project-img" src="pictures/Ritesh Project.png" > <div class="overlay">
             <div class="text">
                 <p>
                     <h1>Super Hero</h1>
