--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                                     <a class="nav-link active" aria-current="page" href="#">HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">ABOUT US</a>
+                                    <a class="nav-link active" href="/events">EVENTS</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" href="/saanvivision">VISION</a>
