--- a/public/arvind.html
+++ b/public/arvind.html
@@ -5,10 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sticky Div Example</title>
     <link rel="stylesheet" href="arvind.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="your-integrity-hash" crossorigin="anonymous" />
 
 </head>
 <body>
+    <div class="navbar">
+        <nav class="navbar navbar-expand-lg fixed-top">
+          <div class="container-fluid" style="background-color: black">
+            <!-- <a class="navbar-brand" href="#">CYBERNAUTS</a> -->
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >HOME</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="/events">EVENTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="/saanvivision">VISION</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="/arvindteam">TEAM</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="/riteshhead">HEADS</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
     <section class="mid-sec">
         <div class="clubHead-1">
           <h1>MEET <span class="p-the">the</span></h1>
@@ -73,7 +118,7 @@
                                 <div class="main">
                                     <img class="tokenImage" src="headBW/4.png" alt="head" id="head271image"/>
                                     <h2 class="headname head271name">Arvind</h2>
-                                    <p class="description">Cybernauts Head</p>
+                                    <p class="description">Core Members</p>
                                     <div class="tokenInfo">
                                         <div class="branch">
                                             <p>IT</p>
@@ -89,7 +134,7 @@
                                 <div class="main">
                                     <img class="tokenImage" src="headBW/5.png" alt="head" id="head272image"/>
                                     <h2 class="headname head272name">Baani</h2>
-                                    <p class="description">Cybernauts Head</p>
+                                    <p class="description">Core Members</p>
                                     <div class="tokenInfo">
                                         <div class="branch">
                                             <p>IT</p>
