--- a/public/baani.html
+++ b/public/baani.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap demo</title>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
+   
+   
     <link rel="stylesheet" href="baani.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head><body>
+    
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-..."
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />-->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous" 
+    /> -->
+  </head>
+
+  <body>
+    <!-- <section>
+      <div class="combine">
+        <div class="navbar">
+          <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid" style="background-color: black">
+              <a class="navbar-brand" href="#">CYBERNAUTS</a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >HOME</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/events">EVENTS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/saanvivision">VISION</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/arvindteam">TEAM</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/riteshhead">HEADS</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </section> -->
+<section class="events88">
 <div class="events_body">
     <div class="events-title">the</div>
     <div class="EVENT">EVENTS<span>&</span></div>
@@ -25,7 +103,7 @@
             </div>
         </div>
         <div class="container right-container">
-            <img src="pictures/3.png">
+            <img src="3.png">
             <div class="text-box2">
                 <h1>EVENT 2</h1>
                 <p class="event_name">INTRODUCTORY SESSIONS</p>
@@ -51,7 +129,7 @@
         </div>
 
         <div class="container right-container">
-            <img src="pictures/3.png">
+            <img src="3.png">
             <div class="text-box4 ">
                 <h1>EVENT 4</h1>
                 <p class="event_name">DSA (Data Structures & Algorithms)</p>
@@ -89,6 +167,161 @@
 
     </div> -->
     </div>
-    <div class="se"><a>See More</a><i class="fa-solid fa-arrow-right"></i></div>
+    <!-- <div class="se"><a>See More</a><i class="fa-solid fa-arrow-right"></i></div> -->
 </div>
-</body>
+</section>
+<section class="prefooter">
+  <div class="contact-us">
+    <div class="left">
+      <div class="chotu">
+        Let's <br />
+        Talk
+      </div>
+      <div class="ani">
+        <h2>Have a Project <br />in mind? <br />contact us!</h2>
+      </div>
+    </div>
+    <div class="right">
+      <div class="subscribe">
+        <div class="inputbox">
+          <input type="text" required="required" />
+          <span>Your email address</span>
+          <i></i>
+        </div>
+      </div>
+      <div class="query">
+        <div class="query-input">
+          <textarea id="query-input" required="required"></textarea>
+          <span id="query-placeholder">Drop your msg</span>
+          <i></i>
+        </div>
+      </div>
+      <button class="send">Send Now</button>
+    </div>
+  </div>
+</section>
+<section class="footer11">
+  <footer>
+    <div id="imgpara">
+      <div class="logo">
+        <div id="img"></div>
+        <h3>
+          Cyber<i class="fa-solid fa-rocket"><span class="flame"></span></i
+          ><span>Nauts</span>
+        </h3>
+      </div>
+
+      <div id="para">
+        <p>
+          At Cybernauts, members dive into workshops, seminars,
+          hackathons,and competitions, gaining new skills, sharing ideas,
+          connecting with peers and industry pros. Join us for exciting
+          events that fuel your growth and creativity!
+        </p>
+      </div>
+    </div>
+    <div id="links1">
+      <center>
+        <h5>Website Links</h5>
+        <ul>
+          <!-- <a href="" style="text-decoration: none"><li>Home</li></a>
+          <a href="" style="text-decoration: none"><li>About</li></a>
+          <a href="" style="text-decoration: none"><li>Gallery</li></a>
+          <a href="" style="text-decoration: none"><li>Faqs</li></a> -->
+          <li><a href="">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Vision</a></li>
+          <li><a href="">Gallery</a></li>
+        </ul>
+      </center>
+    </div>
+    <div id="links2">
+      <center>
+        <h5>Explore</h5>
+        <ul>
+          <!-- <a href="" style="text-decoration: none"><li>events</li></a>
+          <a href="" style="text-decoration: none"><li>Contact Us</li></a>
+          <a href="" style="text-decoration: none"
+            ><li>Give Feedback</li></a
+          >
+          <a href="" style="text-decoration: none"><li>projects</li></a> -->
+          <li><a href="">Events</a></li>
+          <li><a href="">Team</a></li>
+          <li><a href="">Contact Us</a></li>
+          <li><a href="">Projects</a></li>
+        </ul>
+      </center>
+    </div>
+    <div id="links3">
+      <h5>Follow Us</h5>
+      <ul>
+        <li>
+          <a
+            href="https://discord.com/channels/1147565564357771324/1147565564357771326"
+            target="_blank"
+            style="text-decoration: none"
+            id="icons"
+          >
+            <i class="fa-brands fa-discord" style="font-size: 1.75vw"></i>
+            <span>Discord</span>
+          </a>
+        </li>
+
+        <li>
+          <a
+            href="https://www.instagram.com/cybernauts_nitj/"
+            target="_blank"
+            style="text-decoration: none"
+            id="icons"
+          >
+            <i class="fa-brands fa-instagram" style="font-size: 2vw"></i>
+            <span>Instagram</span>
+          </a>
+        </li>
+
+        <li>
+          <a
+            href="https://github.com/cybernautsNITJ"
+            target="_blank"
+            style="text-decoration: none"
+            id="icons"
+            ><i class="fa-brands fa-github" style="font-size: 2vw"></i
+            ><span>Github</span>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/cybernauts-nitj-717a7a28a/"
+            target="_blank"
+            style="text-decoration: none"
+            id="icons"
+            ><i class="fa-brands fa-linkedin" style="font-size: 2vw"></i
+            ><span>Linkedin</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <center>
+      <div id="bottomline1">
+        <p>
+          "EMPOWERING THE FUTURE WITH SEAMLESS INNOVATION WHERE TECHNOLOGY
+          MEETS LIMITLESS POTENTIAL"
+        </p>
+      </div>
+    </center>
+    <i class="line"></i>
+    <center>
+      <div id="bottomline2">
+        <p>
+          Copyright <i class="fa-regular fa-copyright"></i> 2024 Cybernauts
+          Society
+        </p>
+      </div>
+    </center>
+  </footer>
+</section>
+<script
+      src="baani.js"
+    ></script>
+  </body>
+</html>
