--- a/public/vision.html
+++ b/public/vision.html
@@ -8,10 +8,60 @@
     <link rel="stylesheet" href="vision.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section>
+        <div class="combine">
+          <div class="navbar">
+            <nav class="navbar navbar-expand-lg fixed-top">
+              <div class="container-fluid" style="background-color: black">
+                <!-- <a class="navbar-brand" href="#">CYBERNAUTS</a> -->
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#"
+                        >HOME</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="/events">EVENTS</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="/saanvivision">VISION</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="/arvindteam">TEAM</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="/riteshhead">HEADS</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </section>
+      <section class="vision88">
    <div id="VM">
     <div id="vision">
         <div id="visionheading">
@@ -38,7 +88,7 @@
         </div>
     </div>
    </div>
-    
+</section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="vision.js"></script>
     <script src="index.js"></script>
