--- a/public/baani.html
+++ b/public/baani.html
@@ -12,6 +12,12 @@
    
    
     <link rel="stylesheet" href="baani.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
     
     <!-- <link
       rel="stylesheet"
@@ -41,6 +47,45 @@
   </head>
 
   <body>
+    <div class="navbar">
+      <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container-fluid" style="background-color: black">
+          <!-- <a class="navbar-brand" href="#">CYBERNAUTS</a> -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >HOME</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/events">EVENTS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/saanvivision">VISION</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/arvindteam">TEAM</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/riteshhead">HEADS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
     <!-- <section>
       <div class="combine">
         <div class="navbar">
