Added strong tag to HOD sir name

--- a/public/ritesh.html
+++ b/public/ritesh.html
@@ -80,7 +80,7 @@
       </section>
   
 
-<section class="ritesh" style="margin-top: 2%;">
+<section class="ritesh" style="margin-top: 5%;">
 <!-- First Heading (Under the Guidance of)-->
 <div class="center">
     <div class="inline-center">
@@ -102,33 +102,39 @@
 
 <!-- Faculty Information -->
 <div class="faculty">
-    <div style="display: inline;" id="faculty-images" >
-        <div class="responsive-container">
-            <img style="mix-blend-mode: luminosity;" src="pictures/HOD_sir1.png" loading="lazy" class="responsive-image">
+    <!-- Faculty Member 1 -->
+    <div class="flip-container responsive-container">
+        <div class="flipper responsive-container">
+            <div class="front">
+                <img src="pictures/HOD_sir1.png" alt="Mr. D K Gupta" loading="lazy" class="responsive-image">
+                <p class="white_text bold_text"><strong>Mr. D K Gupta</strong></p>
+                <p class="white_text">Head Of Department</p>
+                <p class="white_text">(Information Technology)</p>
+            </div>
+            <div class="back">
+                <img src="pictures/HOD_sir1.png" alt="Mr. D K Gupta" loading="lazy" class="responsive-image">
+                <p class="white_text"><strong>Mr. D K Gupta</strong></p>
+                <p class="white_text">Head Of Department</p>
+                <p class="white_text">(Information Technology)</p>
+            </div>
         </div>
-        <span style="color:whitesmoke;" >
-            <p class="center">
-                Mr.D K Gupta
-            </p>
-            <p class="center">
-                Head Of Department
-            </p>
-            <p class="center">(Information Technology)</p>
-        </span>
     </div>
-    <div style="display: inline;" id="faculty-images">
-        <div class="responsive-container">
-            <img style="mix-blend-mode: luminosity;" src="pictures/Nisha_m.png" loading="lazy" class="responsive-image">
+    <!-- Faculty Member 2 -->
+    <div class="flip-container responsive-container">
+        <div class="flipper responsive-container">
+            <div class="front">
+                <img src="pictures/Nisha_m.png" alt="Dr. Nisha Chaurasia" loading="lazy" class="responsive-image">
+                <p class="white_text"><strong>Dr. Nisha Chaurasia</strong> </p>
+                <p class="white_text">Faculty Coordinator</p>
+                <p class="white_text">(Information Technology)</p>
+            </div>
+            <div class="back">
+                <img src="pictures/Nisha_m.png" alt="Dr. Nisha Chaurasia" loading="lazy" class="responsive-image">
+                <p class="white_text"><strong>Dr. Nisha Chaurasia</strong></p>
+                <p class="white_text">Faculty Coordinator</p>
+                <p class="white_text">(Information Technology)</p>
+            </div>
         </div>
-        <span style="color:whitesmoke;" >
-            <p class="center">
-                Dr. Nisha Chaurasia
-            </p>
-            <p class="center">
-                Faculty Coordinator
-            </p>
-            <p class="center">(Information Technology)</p>
-        </span>
     </div>
 </div>
 <!-- Faculty Information -->
