Corrected uper magin of faculty container

--- a/public/ritesh.html
+++ b/public/ritesh.html
@@ -80,7 +80,7 @@
       </section>
   
 
-<section class="ritesh" style="margin-top: 5d rem;">
+<section class="ritesh" style="margin-top: 5rem;">
 <!-- First Heading (Under the Guidance of)-->
 <div class="center">
     <div class="inline-center">
